roles/Infra/nextcloud/files/nextcloud-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-maria-db
  namespace: nextcloud
  labels:
    app: nextcloud
    component: maria-db
spec:
  selector:
    component: maria-db
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-maria-db
  namespace: nextcloud
  labels:
    app: nextcloud
    component: maria-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      component: maria-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
        component: maria-db
    spec:
      containers:
        - name: nextcloud-maria-db
          image: mariadb:10.10.2
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --max-connections=1000
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: nextcloud-mariadb-volume
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: nextcloud-mariadb-volume
          persistentVolumeClaim:
            claimName: nextcloud-maria-pvc
