roles/Infra/nextcloud/files/nextcloud-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: nextcloud
    component: redis
spec:
  selector:
    component: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: nextcloud
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      component: redis
  template:
    metadata:
      labels:
        app: nextcloud
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
      restartPolicy: Always
