roles/Infra/nextcloud/files/nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    component: app
spec:
  selector:
    component: app
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      component: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
        component: app
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:apache
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
      restartPolicy: Always
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
